	PR other/6955 	* collect2.c (collect_wait): Use WCOREDUMP and fix output message. 	* system.h (WCOREDUMP, WCOREFLG): Define if necessary.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@65048 138bc75d-0d04-0410-961f-82ee72b054a4